intel-compute-runtime (23.35~git20230926-1) UNRELEASED; urgency=medium

  * New upstream release. (Closes: #1051189, #1052513)
  * Split packaging so ocloc and level zero files are in their own
    packages.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 19 Jun 2023 15:57:33 +0300

intel-compute-runtime (23.13.26032.7-1) experimental; urgency=medium

  * New upstream release.
  * control: Bump igc build-depends.
  * control: Bump libze-dev build-dep.
  * rules: Skip unit tests.

 -- Timo Aaltonen <tjaalton@debian.org>  Sat, 15 Apr 2023 00:09:48 +0300

intel-compute-runtime (22.43.24595.41-1) unstable; urgency=medium

  * New upstream release.
  * control: Enable level-zero, add libze-dev to build-depends.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 10 Jan 2023 16:49:25 +0200

intel-compute-runtime (22.43.24595.35-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Thu, 08 Dec 2022 15:28:23 +0200

intel-compute-runtime (22.39.24347-1) unstable; urgency=medium

  * New upstream release.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 04 Oct 2022 16:53:29 +0300

intel-compute-runtime (22.34.24023-2) unstable; urgency=medium

  [ Andreas Beckmann ]
  * Add salsa-ci.yml.

  [ Timo Aaltonen ]
  * control: Bump build-dep on igc.

 -- Timo Aaltonen <tjaalton@debian.org>  Tue, 20 Sep 2022 15:36:21 +0300

intel-compute-runtime (22.34.24023-1) unstable; urgency=medium

  * New upstream release.
  * control: Drop i386, it's not supported anymore.
  * typos.patch: Refreshed.

 -- Timo Aaltonen <tjaalton@debian.org>  Fri, 26 Aug 2022 13:53:36 +0300

intel-compute-runtime (22.31.23852-1) unstable; urgency=medium

  * New upstream release.  (Closes: #1016951)
  * patches: Drop correct-getters-in-generated-commands.diff (upstream),
    refresh typos.patch.
  * control: Bump i-g-c build-depends.

 -- Timo Aaltonen <tjaalton@debian.org>  Mon, 15 Aug 2022 19:01:19 +0300

intel-compute-runtime (22.14.22890-2) unstable; urgency=medium
